first draft of acl editing
